# fl-dev

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  test_fedkd_server_model.py
fl/: .gitignore  README.md  pyproject.toml
fl/flower/client/: client_app.py
fl/flower/client/apps/: __init__.py  fed_avg_client.py  fed_kd_client.py  fed_moon_client.py  flower_demo.py  flower_demo_client.py
fl/flower/common/: __init__.py
fl/flower/common/_class/: __init__.py  data_loader_config.py  data_loader_manager.py
fl/flower/common/dataLoader/: data_loader.py
fl/flower/common/models/: complex_cnn.py  mini_cnn.py  moon_model.py  simple_cnn.py
fl/flower/common/task/: __init__.py  cnn_task.py  distillation.py  moon.py
fl/flower/common/util/: data_loader.py  model_factory.py  util.py  visualize_data.py
fl/flower/scripts/: visualize_data_distribution.py
fl/flower/server/: server_app.py
fl/flower/server/apps/: fed_avg_server.py  fed_kd_fl.py  fed_kd_server.py  flower_demo_server.py
fl/flower/server/strategy/: fed_avg.py  fed_kd.py
flower/: README.md  pyproject.toml
flower/docs/: LOGIT_FILTERING_EVALUATION.md  README.md  SUPPORTED_DATASETS.md
flower/experiments/config/: pyproject.toml
flower/experiments/scripts/: run_simulation.py  visualize_data_distribution.py
flower/fed/: __init__.py
flower/fed/algorithms/: __init__.py  csd_based_moon.py  distillation.py  loca_based_distillation.py  logit_calibration_moon.py  moon.py  old_distillation.py  old_moon.py
flower/fed/communication/: __init__.py
flower/fed/communication/client/: __init__.py  client_app.py
flower/fed/communication/client/apps/: fed_avg_client.py  fed_kd_client.py  fed_kd_params_share_client.py  fed_md_client.py  fed_md_params_share_client.py  fed_moon_client.py  fed_moon_params_share_client.py  fed_moon_params_share_csd_client.py  old_fed_moon_client.py
flower/fed/communication/server/: __init__.py  server_app.py
flower/fed/communication/server/apps/: __init__.py  fed_avg_server.py  fed_kd_avg_server.py  fed_kd_distillation_model_server.py  fed_kd_params_share_csd_server.py  fed_kd_params_share_server.py  fed_kd_public_distillation_server.py  fed_kd_server.py  fed_kd_weighted_avg_server.py  fed_md_avg_server.py  fed_md_distillation_model_server.py  fed_md_distillation_model_with_training_server.py  fed_md_params_share_csd_server.py  fed_md_params_share_server.py  fed_md_public_distillation_server.py  fed_md_weighted_avg_server.py  fed_moon_params_share_server.py
flower/fed/communication/server/strategy/: __init__.py  fed_avg.py  fed_kd.py  fed_kd_avg.py  fed_kd_distillation_model.py  fed_kd_params_share.py  fed_kd_params_share_csd.py  fed_kd_public_distillation.py  fed_kd_weighted_avg.py  fed_md_avg.py  fed_md_distillation_model.py  fed_md_distillation_model_with_training.py  fed_md_params_share.py  fed_md_params_share_csd.py  fed_md_public_distillation.py  fed_md_weighted_avg.py  fed_moon_params_share.py
flower/fed/data/: data_loader_config.py  data_loader_manager.py  data_transform_manager.py  public_data.py  transformed_dataset.py
flower/fed/models/: base_model.py  mini_cnn.py  mini_cnn_header.py  moon_model.py  simple_cnn.py
flower/fed/task/: __init__.py  cnn_task.py
flower/fed/util/: communication_cost.py  create_model.py  create_partitioner.py  data_loader.py  model_factory.py  model_util.py  visualize_data.py
flower/flower/client/: client_app.py
flower/flower/common/models/: mini_cnn.py
flower/flower/common/task/: cnn_task.py
flower/flower/common/util/: data_loader.py  util.py
flower/flower/server/: server_app.py
flower/flower/server/strategy/: fed_avg.py
flower/scripts/: evaluate_model_accuracy.py  plot_communication_cost.py  plot_model_accuracy.py  plot_propose_method_model_accuracy.py  run_simulation.py  visualize_data_distribution.py
(+4 files in other folders)
