[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "shigeo"

[tool.flwr.app.components]
serverapp = "flower.server.server_app:app"
clientapp = "flower.client.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 0.25
fraction-evaluate = 0.5
local-epochs = 1
server-device = "cpu"
use-wandb = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
