[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "shigeo"

[tool.flwr.app.components]
serverapp = "fed.communication.server.server_app:app"
clientapp = "fed.communication.client.client_app:app"

[tool.flwr.app.config]
model_name = "mini-cnn"
dataset_name = "uoft-cs/cifar10"
client_name = "fed-moon-client"
server_name = "fed-kd-distillation-model-server"

num-server-rounds = 10
local-epochs = 3

server-device = "cpu"
use-wandb = true
wandb_project_name = "fl-dev-round-30"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
